# codeclipper

./: CMakeLists.txt  LICENSE  README.md
src/: CliParser.cxx  CliParser.hxx  Common.hxx  ConsoleWrite.cxx  ConsoleWrite.hxx  ContextGatherer.cxx  ContextGatherer.hxx  FileSystem.cxx  FileSystem.hxx  GitIgnoreFilter.cxx  GitIgnoreFilter.hxx  IClipboard.hxx  IFileSystem.hxx  IFilter.hxx  IWriter.hxx  McpServer.cxx  McpServer.hxx  NoOpClipboard.hxx  PathFilter.cxx  PathFilter.hxx  Platform.hxx  Platform.unix.cxx  Platform.win32.cxx  RuntimeConfig.hxx  StringWriter.cxx  StringWriter.hxx  SystemClipboard.cxx  SystemClipboard.hxx  main.cxx  resource.rc
tests/: FileSystemTests.cxx  FilterTests.cxx  GathererTests.cxx  McpTests.cxx  StringWriterTests.cxx
